# fireflyframework-pyfly

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  pages.yml  pii.yml  release.yml
assets/: README.md
assets/tools/: build_brand_assets.py  icons.py
benchmarks/: README.md  run.py
book/: book.es.yaml  book.yaml
book/manuscript/: 00-quickstart.md  01-why-pyfly.md  02-dependency-injection.md  03-configuration.md  04-first-http-api.md  05-persistence.md  06-domain-driven-design.md  07-cqrs.md  08-eda.md  09-event-sourcing.md  10-messaging.md  11-http-clients.md  12-sagas.md  13-caching-resilience.md  14-security.md  15-observability.md  16-testing.md  17-scheduling-notifications.md  18-production.md  90-appendix-a-spring.md  91-appendix-b-mongodb.md  92-appendix-c-ecm.md  93-appendix-d-cli.md  94-glossary.md
book/manuscript-es/: 00-quickstart.md  01-why-pyfly.md  02-dependency-injection.md  03-configuration.md  04-first-http-api.md  05-persistence.md  06-domain-driven-design.md  07-cqrs.md  08-eda.md  09-event-sourcing.md  10-messaging.md  11-http-clients.md  12-sagas.md  13-caching-resilience.md  14-security.md  15-observability.md  16-testing.md  17-scheduling-notifications.md  18-production.md  90-appendix-a-spring.md  91-appendix-b-mongodb.md  92-appendix-c-ecm.md  93-appendix-d-cli.md  94-glossary.md
book/tests/: test_epub.py  test_md.py  test_verify_code.py
book/theme/: book.css  print.css  pygments.css  tokens.css
docs/: README.md  cli.md  getting-started.md  index.md  installation.md  spring-comparison.md  versioning.md
docs/adapters/: README.md  fastapi.md  granian.md  kafka.md  mongodb.md  rabbitmq.md  redis.md  sqlalchemy.md  starlette.md
docs/modules/: README.md  actuator.md  admin.md  aop.md  caching.md  callbacks.md  client.md  config-server.md  configuration.md  core.md  cqrs.md  custom-actuator-endpoints.md  data-document.md  data-relational.md  data.md  dependency-injection.md  domain.md  ecm.md  error-handling.md  events.md  eventsourcing.md  i18n.md  idp.md  integration-testing.md  logging.md  messaging.md  notifications.md  oauth2.md  observability.md  plugins.md  resilience.md  rule-engine.md  scheduling.md  security.md  server.md  session.md  shell.md  starters.md  testing.md  transactional.md  (+5 more)
docs/stylesheets/: pyfly.css
ops/prometheus/: prometheus.yml
overrides/: main.html
samples/lumen/: README.md  pyfly.yaml  pyproject.toml
samples/lumen/src/lumen/: __init__.py  app.py  main.py
samples/lumen/src/lumen/core/: __init__.py
samples/lumen/src/lumen/core/mappers/: __init__.py  wallet_mapper.py
samples/lumen/src/lumen/core/services/listeners/: __init__.py  wallet_audit_listener.py
samples/lumen/src/lumen/core/services/transfers/: __init__.py  money_transfer_saga.py  transfer_request.py  transfer_service.py
samples/lumen/src/lumen/core/services/wallets/: __init__.py  deposit_funds_command.py  deposit_funds_handler.py  event_publishing.py  get_balance_handler.py  get_balance_query.py  get_wallet_handler.py  get_wallet_query.py  list_rich_wallets_handler.py  list_rich_wallets_query.py  list_wallets_handler.py  list_wallets_query.py  open_wallet_command.py  open_wallet_handler.py  withdraw_funds_command.py  withdraw_funds_handler.py
samples/lumen/src/lumen/interfaces/dtos/: __init__.py
samples/lumen/src/lumen/interfaces/dtos/v1/: __init__.py  balance_dto.py  deposit_request.py  open_wallet_request.py  page_dto.py  wallet_dto.py
samples/lumen/src/lumen/interfaces/enums/: __init__.py
samples/lumen/src/lumen/interfaces/enums/v1/: currency.py
samples/lumen/src/lumen/models/: __init__.py
samples/lumen/src/lumen/models/entities/: __init__.py
samples/lumen/src/lumen/models/entities/v1/: ledger_account.py  money.py  wallet_entity.py  wallet_orm.py
samples/lumen/src/lumen/models/repositories/: __init__.py  ledger_repository.py  sql_wallet_repository.py  wallet_repository.py
samples/lumen/src/lumen/sdk/: __init__.py  client.py
samples/lumen/src/lumen/web/controllers/: __init__.py  wallet_controller.py
samples/lumen/tests/: conftest.py  test_app_context_integration.py  test_cqrs_flow.py  test_event_listener.py  test_ledger_event_sourcing.py  test_money.py  test_money_transfer_saga.py  test_sql_wallet_repository.py  test_wallet_aggregate.py
samples/order_service/: README.md  pyfly.yaml  pyproject.toml
samples/order_service/src/order_service/: __init__.py  app.py
samples/order_service/src/order_service/core/: __init__.py
samples/order_service/src/order_service/core/mappers/: __init__.py  order_mapper.py
samples/order_service/src/order_service/core/services/orders/: __init__.py  confirm_order_saga.py  get_order_handler.py  get_order_query.py  place_order_command.py  place_order_handler.py
samples/order_service/src/order_service/interfaces/: __init__.py
samples/order_service/src/order_service/interfaces/dtos/: __init__.py
samples/order_service/src/order_service/interfaces/dtos/v1/: order_dto.py  place_order_request.py
samples/order_service/src/order_service/interfaces/enums/: __init__.py
samples/order_service/src/order_service/interfaces/enums/v1/: order_status.py
samples/order_service/src/order_service/models/: __init__.py
samples/order_service/src/order_service/models/entities/: __init__.py
samples/order_service/src/order_service/models/entities/v1/: order_entity.py
samples/order_service/src/order_service/models/repositories/: __init__.py  order_repository.py
samples/order_service/src/order_service/sdk/: __init__.py  client.py
samples/order_service/src/order_service/web/controllers/: __init__.py  order_controller.py
samples/order_service/tests/: conftest.py  test_confirm_order_saga.py  test_cqrs_flow.py  test_order_aggregate.py
scripts/: build_site.py
src/pyfly/: __init__.py
tests/: conftest.py  test_hexagonal.py  test_integration.py
tests/actuator/: test_custom_endpoint.py  test_endpoints.py  (+12 more)
web/: app.js  index.html  styles.css
(+1259 files in other folders)
