[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfly"
# CalVer YY.MM.PATCH — package metadata uses PEP 440 normalized form (26.5.4);
# git tag, GitHub release and human-readable display use leading-zero form
# (v26.05.04) to match the Java/.NET/Go siblings.
version = "26.6.114"
description = "The official Python implementation of the Firefly Framework — DI, CQRS, EDA, hexagonal architecture, and more."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Firefly Software Foundation", email = "dev@getfirefly.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/fireflyframework/fireflyframework-pyfly"
Repository = "https://github.com/fireflyframework/fireflyframework-pyfly"
Organization = "https://github.com/fireflyframework"
Issues = "https://github.com/fireflyframework/fireflyframework-pyfly/issues"

[project.optional-dependencies]
web = [
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.50.2",
    "python-multipart>=0.0.32",
]
data-relational = [
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18.5",
    "aiosqlite>=0.22.1",
]
testing = [
    "jsonpath-ng>=1.8.0",
]
argon2 = [
    "argon2-cffi>=25.1.0",  # Argon2PasswordEncoder (OWASP-preferred password hashing)
]
testcontainers = [
    "testcontainers>=4.14.2",
    "pika>=1.4.1",  # testcontainers' RabbitMqContainer imports pika for its readiness probe
]
data-document = [
    "beanie>=2.1.0",
]
postgresql = [
    "asyncpg>=0.31.0",
]
eda = [
    "aiokafka>=0.14.0",
    "aio-pika>=9.6.2",
]
fastapi = [
    "fastapi>=0.139.0",
]
granian = [
    "granian>=2.7.9",
]
hypercorn = [
    "hypercorn>=0.18.0",
]
kafka = [
    "aiokafka>=0.14.0",
]
rabbitmq = [
    "aio-pika>=9.6.2",
]
redis = [
    "redis[hiredis]>=8.0.1",
]
cache = [
    "redis[hiredis]>=8.0.1",
]
client = [
    "httpx>=0.28.1",
]
config-server-git = [
    "GitPython>=3.1.50",
]
grpc = [
    "grpcio>=1.81.1",
]
websocket = [
    "websockets>=16.0",
]
idp-azure = [
    "httpx>=0.28.1",
]
idp-keycloak = [
    "httpx>=0.28.1",
]
idp-cognito = [
    "boto3>=1.43.42",
]
ecm-aws = [
    "boto3>=1.43.42",
]
ecm-azure = [
    "azure-storage-blob>=12.30.0",
]
observability = [
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-instrumentation-starlette>=0.64b0",
    "structlog>=26.1.0",
]
scheduling = [
    "croniter>=6.2.3",
]
pii = [
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
]
security = [
    "pyjwt[crypto]>=2.13.0",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "pyotp>=2.10.0",
]
notifications = [
    "jinja2>=3.1.6",
]
cli = [
    "click>=8.4.2",
    "rich>=15.0.0",
    "jinja2>=3.1.6",
    "questionary>=2.1.1",
]
shell = [
    "click>=8.4.2",
]
web-fast = [
    "pyfly[web,granian]",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]
web-fastapi = [
    "pyfly[fastapi,granian]",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]
full = [
    "pyfly[web,data-relational,data-document,postgresql,eda,cache,client,grpc,websocket,ecm-aws,ecm-azure,observability,security,scheduling,cli,shell,kafka,rabbitmq,redis,granian,fastapi,hypercorn,idp-azure,idp-keycloak,idp-cognito,notifications,config-server-git]",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "coverage[toml]>=7.15.0",
    "mypy>=2.2.0",
    "ruff>=0.15.20",
    "mongomock-motor>=0.0.36",
    "jsonpath-ng>=1.8.0",
    "respx>=0.23.1",
    "aiosmtpd>=1.4.6",
]

[project.entry-points."pyfly.auto_configuration"]
web = "pyfly.web.auto_configuration:WebAutoConfiguration"
cache = "pyfly.cache.auto_configuration:CacheAutoConfiguration"
messaging = "pyfly.messaging.auto_configuration:MessagingAutoConfiguration"
eda = "pyfly.eda.auto_configuration:EdaAutoConfiguration"
eda-health = "pyfly.eda.auto_configuration:EdaHealthAutoConfiguration"
client = "pyfly.client.auto_configuration:ClientAutoConfiguration"
grpc-client = "pyfly.client.auto_configuration:GrpcClientAutoConfiguration"
websocket-client = "pyfly.client.auto_configuration:WebSocketClientAutoConfiguration"
document = "pyfly.data.document.auto_configuration:DocumentAutoConfiguration"
relational = "pyfly.data.relational.auto_configuration:RelationalAutoConfiguration"
migrations = "pyfly.data.relational.auto_configuration:MigrationAutoConfiguration"
shell = "pyfly.shell.auto_configuration:ShellAutoConfiguration"
cqrs = "pyfly.cqrs.config.auto_configuration:CqrsAutoConfiguration"
admin = "pyfly.admin.auto_configuration:AdminAutoConfiguration"
transactional = "pyfly.transactional.auto_configuration:TransactionalEngineAutoConfiguration"
eventsourcing = "pyfly.eventsourcing.auto_configuration:EventSourcingAutoConfiguration"
callbacks = "pyfly.callbacks.auto_configuration:CallbacksAutoConfiguration"
webhooks = "pyfly.webhooks.auto_configuration:WebhooksAutoConfiguration"
notifications = "pyfly.notifications.auto_configuration:NotificationsAutoConfiguration"
idp = "pyfly.idp.auto_configuration:IdpAutoConfiguration"
ecm = "pyfly.ecm.auto_configuration:EcmAutoConfiguration"
plugins = "pyfly.plugins.auto_configuration:PluginsAutoConfiguration"
rule-engine = "pyfly.rule_engine.auto_configuration:RuleEngineAutoConfiguration"
config-server = "pyfly.config_server.auto_configuration:ConfigServerAutoConfiguration"
server = "pyfly.server.auto_configuration:ServerAutoConfiguration"
event-loop = "pyfly.server.auto_configuration:EventLoopAutoConfiguration"
security-jwt = "pyfly.security.auto_configuration:JwtAutoConfiguration"
security-password = "pyfly.security.auto_configuration:PasswordEncoderAutoConfiguration"
security-http-basic = "pyfly.security.auto_configuration:HttpBasicAutoConfiguration"
security-form-login = "pyfly.security.auto_configuration:FormLoginAutoConfiguration"
security-logout = "pyfly.security.auto_configuration:LogoutAutoConfiguration"
oauth2-resource-server = "pyfly.security.auto_configuration:OAuth2ResourceServerAutoConfiguration"
oauth2-authorization-server = "pyfly.security.auto_configuration:OAuth2AuthorizationServerAutoConfiguration"
oauth2-client = "pyfly.security.auto_configuration:OAuth2ClientAutoConfiguration"
scheduling = "pyfly.scheduling.auto_configuration:SchedulingAutoConfiguration"
metrics = "pyfly.observability.auto_configuration:MetricsAutoConfiguration"
tracing = "pyfly.observability.auto_configuration:TracingAutoConfiguration"
actuator = "pyfly.actuator.auto_configuration:ActuatorAutoConfiguration"
actuator-metrics = "pyfly.actuator.auto_configuration:MetricsActuatorAutoConfiguration"
aop = "pyfly.aop.auto_configuration:AopAutoConfiguration"
i18n = "pyfly.i18n.auto_configuration:I18nAutoConfiguration"
session = "pyfly.session.auto_configuration:SessionStoreAutoConfiguration"
session-filter = "pyfly.session.auto_configuration:SessionFilterAutoConfiguration"
session-concurrency = "pyfly.session.auto_configuration:SessionConcurrencyAutoConfiguration"
oauth2-login = "pyfly.security.auto_configuration:OAuth2LoginAutoConfiguration"
csrf-filter = "pyfly.web.security_filters_auto_configuration:CsrfFilterAutoConfiguration"
http-security-filter = "pyfly.web.security_filters_auto_configuration:HttpSecurityFilterAutoConfiguration"
idempotency-filter = "pyfly.web.idempotency_auto_configuration:IdempotencyFilterAutoConfiguration"
resilience = "pyfly.resilience.auto_configuration:ResilienceAutoConfiguration"

[project.scripts]
pyfly = "pyfly.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfly"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests (tests/integration/, marker auto-applied) are deselected by default so the
# fast suite stays mock/fake-based. Run them explicitly with: pytest -m integration
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: real-backend test via testcontainers or a real transport; needs Docker. Deselected by default — run with -m integration.",
    "docker: informational marker for Docker-backed tests; apply ALONGSIDE 'integration' (it does not by itself control default selection).",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "UP046",   # PEP 695 generic class syntax (not adopting yet)
    "UP047",   # PEP 695 generic function syntax (not adopting yet)
    "N818",    # PyFlyException naming is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/data/test_mongo_*.py" = ["E402"]  # pytest.importorskip must precede imports
"tests/ecm/test_logalty_behavior.py" = ["E402"]  # pytest.importorskip must precede imports

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/pyfly"]
branch = true
